--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Jesus Christ -- Miracles -- Early works to 1800'
 - !lcsh 'Gibson, Edmund, 1669-1748'
 - !lcsh 'Smalbroke, Richard, 1672-1749'
+- GITenberg
 title: Six Discourses on the Miracles of Our Saviour, and Defences of His Discourses
 url: http://www.gutenberg.org/ebooks/41203
